# AOC2025

./: .gitignore  ;  Cargo.toml  flake.nix
src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  lib.rs
