[package]
name = "aoc2025"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
log = "^0"
env_logger = "^0"
test-log = "^0"
regex = "1.10.2"
lazy_static = "1.4.0"
itertools = "0.14.0"
anyhow = "1.0.75"
rayon = "1.8.0"
colored = "3.0.0"
cached = "0.56.0"
ansi_term = "0.12.1"
memoize = "0.5.0"
fancy-regex = "0.16.2"
